--- a/index-seconda-milestone.html
+++ b/index-seconda-milestone.html
@@ -34,18 +34,34 @@ Attraverso un’altra chiamata api, filtrare gli album per genere
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.20.0/axios.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
 
     <div id="app">
-        <div v-for="disc in discs">
-            {{disc}}
-        </div>
-    
-    </div>
 
+        <div class="main">
+            <div class="navbar">
+                <i class="fab menu fa-spotify"></i>
+            </div>
+                <div class="container ">
+                    <div class="row">
+                        <div class="album tac" v-for="disc in discs">
+                            <img v-bind:src="disc.poster" />
+                            <h4>{{disc.title}}</h4>
+                            <div class='subtitle'>
+                                <h5>{{disc.author}}</h5>
+                                <h5>{{disc.year}}</h5>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="js/script.js"></script>    
 </body>
